remove "sets are a datatype" slide

--- a/presentation.tex
+++ b/presentation.tex
@@ -140,13 +140,13 @@
 \end{frame}
 
 
-\begin{frame}\Large\centering
-  \bf Tuples and sets are just datatypes!
+%% \begin{frame}\Large\centering
+%%   \bf Tuples and sets are just datatypes!
 
-  \vspace{2em}\pause
+%%   \vspace{2em}\pause
 
-  If tables are sets, what are queries?
-\end{frame}
+%%   If tables are sets, what are queries?
+%% \end{frame}
 
 
 \begin{frame}{Queries as set comprehensions}\Large\centering
