--- a/presentation.tex
+++ b/presentation.tex
@@ -305,7 +305,7 @@ y in \alt<3>{\{0,1\}}{\alt<4>{\color{red}\inftyloop}{EXPR2}}}%
   %% \textbf{Recipe for a functional query language:}\vspace{0.5em}
 
   \begin{enumerate}\itemsep 1.5em
-  \item Take a functional language
+  \item Take a pure, total functional language
   \item Add sets and set comprehensions
   \item Normalize away higher-order functions?
   \item Optimize!
