--- a/presentation.tex
+++ b/presentation.tex
@@ -31,6 +31,7 @@
 \usepackage[bb=boondox]{mathalfa} % or bb=ams
 \usepackage{anyfontsize}
 \usepackage[T1]{fontenc}
+\frenchspacing
 
 
 %% Commands
